--- a/weather-app/src/app/app.component.html
+++ b/weather-app/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>Weather App!</h1>
-<app-search-city></app-search-city>
-<p>{{ data.name }}</p>
+<app-search-city (newItemEvent)="setCity($event)"></app-search-city>
+<p>{{ data?.name }}</p>
+<p>{{ data?.main?.humidity }}</p>
+<p>{{ setDateFromTimezone() }}</p>
