added component for weather details, added styles

--- a/weather-app/src/app/search-city/search-city.component.html
+++ b/weather-app/src/app/search-city/search-city.component.html
@@ -1,5 +1,10 @@
 <div class="search">
   <form #search="ngForm" (submit)="onSubmit()">
-    <input type="text" name="text" [(ngModel)]="cityName" />
+    <input
+      placeholder="Search your city"
+      type="text"
+      name="text"
+      [(ngModel)]="cityName"
+    />
   </form>
 </div>
