--- a/weather-app/src/app/app.component.html
+++ b/weather-app/src/app/app.component.html
@@ -4,7 +4,9 @@
   <h1>Weather App!</h1>
   <app-search-city (newItemEvent)="setCity($event)"></app-search-city>
   <app-weather-details
-    [weatherData]="data"
+    [weatherData]="weatherData"
     [timezoneOffset]="setDateFromTimezone()"
+    [isLoading]="isLoading"
+    [error]="error"
   ></app-weather-details>
 </div>
