--- a/weather-app/src/app/search-city/search-city.component.scss
+++ b/weather-app/src/app/search-city/search-city.component.scss
@@ -1,3 +1,22 @@
-input {
-  border-radius: 2rem;
+.search {
+  min-width: 450px;
+  min-height: 250px;
+  background-size: cover;
+
+  input {
+    border-radius: 2rem;
+  }
+
+  &.night {
+    background-image: url("../../assets/night.jpg");
+  }
+  &.morning {
+    background-image: url("../../assets/morning.jpg");
+  }
+  &.afternoon {
+    background-image: url("../../assets/afternoon.jpg");
+  }
+  &.evening {
+    background-image: url("../../assets/sunset.jpg");
+  }
 }
