added icons, added information about weather, change styles

--- a/weather-app/src/app/app.component.scss
+++ b/weather-app/src/app/app.component.scss
@@ -4,6 +4,8 @@
 
   .card-container {
     background: #706fd3;
+    box-shadow: 13px -7px 42px 3px #000;
+    border: 0;
 
     h1 {
       color: #fff;
