--- a/weather-app/src/app/search-city/search-city.component.html
+++ b/weather-app/src/app/search-city/search-city.component.html
@@ -1,4 +1,4 @@
-<div class="search">
+<div class="search py-3 text-center">
   <form #search="ngForm" (submit)="onSubmit()">
     <input
       placeholder="Search your city"
