--- a/weather-app/src/app/search-city/search-city.component.scss
+++ b/weather-app/src/app/search-city/search-city.component.scss
@@ -1,20 +1,22 @@
 .search {
-  // min-width: 450px;
-  // min-height: 250px;
-  // background-size: cover;
-
   input {
     border-radius: 2rem;
     background-color: #706fd3;
-    border-color: #706fd3;
+
     padding: 0.25rem;
     text-align: center;
-    border: 1px solid #706fd3;
+    border: 1px solid #474787;
+    transition: 0.5s;
 
     &:focus {
       background-color: #706fd3;
-      border: 1px solid #706fd3;
+      border: 1px solid #474787;
       color: #fff;
+      box-shadow: 0px 0px 56px 5px #050505;
+    }
+
+    &:focus-visible {
+      outline: 1px solid #474787;
     }
 
     &::placeholder {
