--- a/weather-app/src/app/weather-details/weather-details.component.scss
+++ b/weather-app/src/app/weather-details/weather-details.component.scss
@@ -1,18 +1,50 @@
-.main-information {
-  min-width: 450px;
-  min-height: 250px;
-  background-size: cover;
+.data-container {
+  height: 100%;
 
-  &.night {
-    background-image: url("../../assets/night.jpg");
+  .main-information {
+    position: relative;
+    min-width: 450px;
+    min-height: 250px;
+    background-size: cover;
+
+    p {
+      color: white;
+      z-index: 2;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    &.night {
+      background-image: url("../../assets/night.jpg");
+    }
+    &.morning {
+      background-image: url("../../assets/morning.jpg");
+    }
+    &.afternoon {
+      background-image: url("../../assets/afternoon.jpg");
+    }
+    &.evening {
+      background-image: url("../../assets/sunset.jpg");
+    }
   }
-  &.morning {
-    background-image: url("../../assets/morning.jpg");
+
+  .other-informations {
+    .icon-column {
+      text-align: center;
+      img {
+        max-width: 35px;
+      }
+    }
   }
-  &.afternoon {
-    background-image: url("../../assets/afternoon.jpg");
-  }
-  &.evening {
-    background-image: url("../../assets/sunset.jpg");
+
+  .danger-container {
+    max-width: 450px;
   }
 }
