--- a/weather-app/src/app/app.component.scss
+++ b/weather-app/src/app/app.component.scss
@@ -7,6 +7,9 @@
     box-shadow: 13px -7px 42px 3px #000;
     border: 0;
 
+    .data-container {
+      height: 100%;
+    }
     h1 {
       color: #fff;
       text-align: center;
