--- a/weather-app/src/app/search-city/search-city.component.scss
+++ b/weather-app/src/app/search-city/search-city.component.scss
@@ -15,6 +15,10 @@
       box-shadow: 0px 0px 56px 5px #050505;
     }
 
+    &:focus::placeholder {
+      color: transparent;
+    }
+
     &:focus-visible {
       outline: 1px solid #474787;
     }
