--- a/weather-app/src/app/weather-information/weather-information.component.html
+++ b/weather-app/src/app/weather-information/weather-information.component.html
@@ -5,26 +5,48 @@
   <p *ngIf="isLoading && !errorMessage">LOADING...</p>
   <p>{{ weatherData?.name }}</p>
   <p>{{ setDateFromTimezone() }}</p>
+  <p>{{ weatherData?.main?.temp | number : "1.0-0" }}°C</p>
 </div>
 <div class="other-informations py-3" *ngIf="!errorMessage">
   <div class="row">
-    <div class="col-md-6 icon-column">
-      <img src="../../assets/icons8-temperature-high-100.png" alt="max_temp" />
-      {{ weatherData?.main?.temp_max | number : "1.0-0" }}
+    <div
+      class="col-md-6 col-sm-1 col-xs-1 py-2 icon-column"
+      data-toggle="tooltip"
+      title="Max temperature"
+    >
+      <img
+        src="../../assets/icons8-temperature-high-100.png"
+        alt="max_temp"
+        class="pr-3"
+      />
+      {{ weatherData?.main?.temp_max | number : "1.0-0" }}°C
     </div>
-    <div class="col-md-6 icon-column">
+    <div
+      class="col-md-6 col-sm-1 col-xs-1 py-2 icon-column"
+      data-toggle="tooltip"
+      title="Min temperature"
+    >
       <img src="../../assets/icons8-temperature-low-100.png" alt="min_temp" />
-      {{ weatherData?.main?.temp_min | number : "1.0-0" }}
+      {{ weatherData?.main?.temp_min | number : "1.0-0" }}°C
     </div>
   </div>
+
   <div class="row">
-    <div class="col-md-6 icon-column">
+    <div
+      class="col-md-6 col-sm-1 col-xs-1 py-2 icon-column"
+      data-toggle="tooltip"
+      title="Humidity"
+    >
       <img src="../../assets/icons8-humidity-64.png" alt="humidity" />
-      {{ weatherData?.main?.humidity }}
+      {{ weatherData?.main?.humidity }}%
     </div>
-    <div class="col-md-6 icon-column">
+    <div
+      class="col-md-6 col-sm-1 col-xs-1 py-2 icon-column"
+      data-toggle="tooltip"
+      title="Wind speed"
+    >
       <img src="../../assets/icons8-wind-100.png" alt="wind" />
-      {{ weatherData?.wind?.speed }}
+      {{ weatherData?.wind?.speed | number : "1.0-1" }}m/s
     </div>
   </div>
 </div>
