--- a/weather-app/src/app/weather-information/weather-information.component.scss
+++ b/weather-app/src/app/weather-information/weather-information.component.scss
@@ -1,6 +1,6 @@
 .main-information {
   position: relative;
-  min-width: 450px;
+
   min-height: 250px;
   background-size: cover;
 
@@ -48,6 +48,7 @@
     text-align: center;
     img {
       max-width: 35px;
+      margin-right: 1rem;
     }
   }
 }
