--- a/weather-app/src/app/weather-information/weather-information.component.html
+++ b/weather-app/src/app/weather-information/weather-information.component.html
@@ -7,7 +7,33 @@
   <p>{{ setDateFromTimezone() }}</p>
   <p>{{ weatherData?.main?.temp | number : "1.0-0" }}°C</p>
 </div>
-<div class="other-informations py-3" *ngIf="!errorMessage">
+<div
+  class="other-informations d-flex flex-colum justify-content-between py-3"
+  *ngIf="!errorMessage"
+>
+  <div class="row">
+    <div
+      class="col-md-6 col-sm-1 col-xs-1 py-2 icon-column"
+      data-toggle="tooltip"
+      title="Pressure"
+    >
+      <img
+        src="../../assets/icons8-pressure-100.png"
+        alt="max_temp"
+        class="pr-3"
+      />
+      {{ weatherData?.main?.pressure | number : "1.0-0" }}hPa
+    </div>
+    <div
+      class="col-md-6 col-sm-1 col-xs-1 py-2 icon-column"
+      data-toggle="tooltip"
+      title="% amount clouds on the sky"
+    >
+      <img src="../../assets/icons8-cloud-100.png" alt="min_temp" />
+      {{ weatherData?.clouds?.all | number : "1.0-0" }}%
+    </div>
+  </div>
+
   <div class="row">
     <div
       class="col-md-6 col-sm-1 col-xs-1 py-2 icon-column"
