--- a/weather-app/src/app/weather-information/weather-details/weather-details.component.html
+++ b/weather-app/src/app/weather-information/weather-details/weather-details.component.html
@@ -2,6 +2,7 @@
   class="other-informations d-flex flex-colum justify-content-between py-3"
   *ngIf="!errorMessage"
 >
+  <div class="loader" *ngIf="isLoading && !errorMessage">LOADING...</div>
   <div class="row">
     <div
       class="col-md-6 col-sm-1 col-xs-1 py-2 icon-column"
