--- a/weather-app/src/app/weather-information/weather-details/weather-details.component.scss
+++ b/weather-app/src/app/weather-information/weather-details/weather-details.component.scss
@@ -3,13 +3,30 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
+
+  .loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 3rem;
+    font-weight: 400;
+    width: 100%;
+    height: 250px;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   .icon-column {
     text-align: center;
 
     img {
       max-width: 35px;
-      margin-right: 1rem;
+      margin-right: 0.5rem;
     }
   }
 }
