added logic to disabled input when error exist, change styles

--- a/weather-app/src/app/search-city/search-city.component.html
+++ b/weather-app/src/app/search-city/search-city.component.html
@@ -6,6 +6,7 @@
       name="text"
       [(ngModel)]="cityName"
       autocomplete="off"
+      disabled="{{ disabledInputDuringError() }}"
     />
   </form>
 </div>
