--- a/weather-app/src/app/weather-information/weather-details/weather-details.component.scss
+++ b/weather-app/src/app/weather-information/weather-details/weather-details.component.scss
@@ -19,6 +19,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border-bottom-right-radius: 0.375rem;
+    border-bottom-left-radius: 0.375rem;
   }
 
   .icon-column {
