--- a/weather-app/src/app/app.component.html
+++ b/weather-app/src/app/app.component.html
@@ -4,7 +4,10 @@
   <div class="card card-container">
     <div class="header-container">
       <h1 class="py-3">Weather App!</h1>
-      <app-search-city (newItemEvent)="setCity($event)"></app-search-city>
+      <app-search-city
+        (newItemEvent)="setCity($event)"
+        [error]="error"
+      ></app-search-city>
     </div>
     <div class="data-container">
       <app-weather-information
